infrastructure/configs/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grad
  labels:
    app.kubernetes.io/part-of: vgu-graduation
---
apiVersion: v1
kind: Namespace
metadata:
  name: garage
  labels:
    app.kubernetes.io/part-of: vgu-graduation
